fixing layout issues, header z-idex & mobile formatting (#26)

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -33,14 +33,6 @@ a {
   color: red;
 }
 
-.mobile-content-container {
-  display: flex;
-  flex-direction: column;
-  padding-left: 3%;
-  max-width: 600px;
-  position: relative;
-}
-
 .red-button {
   transition: $transition-fast;
 }
